--- a/app/src/main/res/layout/activity_more_info.xml
+++ b/app/src/main/res/layout/activity_more_info.xml
@@ -20,15 +20,14 @@
                 android:id="@+id/sight_img"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                ></ImageView>
+                android:layout_weight="1"></ImageView>
 
             <RelativeLayout
                 style="@style/recycler_style"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
                 android:padding="20dp">
 
                 <TextView
@@ -57,37 +56,37 @@
                         android:id="@+id/address_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="АДРЕС"
-                        android:drawablePadding="5dp"
+                        android:background="@android:color/transparent"
                         android:drawableLeft="@drawable/geoposition"
-                        android:background="@android:color/transparent"/>
+                        android:drawablePadding="5dp"
+                        android:text="АДРЕС" />
 
                     <Button
                         android:id="@+id/site_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="САЙТ"
-                        android:drawablePadding="-7dp"
+                        android:background="@android:color/transparent"
                         android:drawableLeft="@drawable/site"
-                        android:background="@android:color/transparent"/>
+                        android:drawablePadding="-7dp"
+                        android:text="САЙТ" />
 
                     <Button
                         android:id="@+id/phones_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="ТЕЛЕФОН"
+                        android:background="@android:color/transparent"
                         android:drawableLeft="@drawable/phone"
                         android:drawablePadding="13dp"
-                        android:background="@android:color/transparent"/>
+                        android:text="ТЕЛЕФОН" />
 
                 </LinearLayout>
             </RelativeLayout>
 
 
             <LinearLayout
-                android:layout_marginHorizontal="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginHorizontal="10dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -96,9 +95,7 @@
                     android:layout_height="wrap_content"
                     android:text="Описание"
                     android:textSize="30sp"
-                    android:textStyle="bold"
-
-                    />
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/desc_text_view"
@@ -112,8 +109,65 @@
                     android:layout_height="wrap_content"
                     android:text="Отзывы"
                     android:textSize="30sp"
-
                     android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="10dp">
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+
+                        >
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            >
+
+                            <ImageView
+                                android:id="@+id/review_image_view"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@mipmap/ic_launcher_round" />
+
+                            <TextView
+                                android:id="@+id/review_lastname"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_toRightOf="@+id/review_image_view"
+                                android:text="Иванов"
+                                android:textSize="20sp" />
+
+                            <TextView
+                                android:id="@+id/review_name"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="10dp"
+                                android:layout_toRightOf="@+id/review_lastname"
+                                android:text="Иван"
+                                android:textSize="20sp" />
+                            <TextView
+                                android:id="@+id/comment"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/review_image_view"
+                                android:text="Многа букав. Не хочется букавы читать. Где картинки?"
+                                android:textSize="24sp" />
+                        </RelativeLayout>
+
+
+                    </androidx.cardview.widget.CardView>
+
+
+                </LinearLayout>
+
+
+
             </LinearLayout>
         </LinearLayout>
 
