--- a/app/src/main/res/layout/visited_places_rv_item.xml
+++ b/app/src/main/res/layout/visited_places_rv_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -8,41 +9,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/rounded_user_message"
-        android:elevation="4dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/visited_places_image_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:layout_margin="5dp"
+            app:cardCornerRadius="10dp">
 
-            <TextView
-                android:id="@+id/visited_sights_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TEXT" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/category_sights"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                <ImageView
+                    android:id="@+id/visited_places_image_view"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:src="@drawable/ava" />
 
-                android:text="TEXT" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp">
 
-            <TextView
-                android:id="@+id/description_visited_sights"
-                android:layout_width="wrap_content"
 
-                android:layout_height="wrap_content"
-                android:text="TEXT" />
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/visited_sights_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="TEXT" />
+
+                    <TextView
+                        android:id="@+id/category_sights"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="TEXT" />
+
+                    <TextView
+                        android:id="@+id/description_visited_sights"
+                        android:layout_width="wrap_content"
+
+                        android:layout_height="wrap_content"
+                        android:text="TEXT" />
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 </LinearLayout>
